--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -18,7 +18,7 @@
           {% csrf_token %}
           <div class="form__group form__group">
             <label for="room_name">Email</label>
-            <input id="username" name="email" type="email" placeholder="e.g. dennis_ivy@email.com" />
+            <input id="username" name="email" type="email" placeholder="e.g. example@email.com" />
           </div>
           <div class=" form__group">
             <label for="password">Password</label>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="layout__body">
-        <h2 class="auth__tagline">Find your study partner</h2>
+        <h2 class="auth__tagline">Discuss and Resolve</h2>
 
         <form class="form" action="" method="POST">
           {% csrf_token %}
