--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,7 +40,7 @@
             <!-- Not Logged In -->
             <div class="nav_menu">
                 <a href="{% url 'login' %}">
-                    {% comment %} <img src="{% static 'images/avatar.svg' %}" /> {% endcomment %}
+                    <img src="{% static 'images/avatar.svg' %}" />
                     <p>Login</p>
                 </a>
                 <a href="{% url 'register' %}">
