--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -26,7 +26,7 @@
                     </div>
 
                     <div class="for__group">
-                        <input class="btn btn--main" type="submit" value="Confirm" />
+                        <a href="{{request.META.HTTP_REFERER}}"><input  class="btn btn--main" type="submit" value="Confirm" /></a>
                     </div>
 
                 </form>
