--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -115,7 +115,7 @@
       <div class="room__message">
         <form action="" method="POST">
           {% csrf_token %}
-          <div> <input name="body" placeholder="Write your message here..." /> <input src="/images/icons/image.svg" name="image" type="image"  /> </div>
+             <input name="body" placeholder="Write your message here..." /> <input src="/images/icons/image.svg" name="image" type="image"  /> 
         </form>
       </div>
     </div>
